--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -4,41 +4,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MovieDetailsActivity">
+    tools:context=".MovieDetailsActivity"
+    android:background="@color/layoutBackground">
 
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:layout_below="@+id/md_backdrop"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginStart="141dp"
-
-        android:layout_marginLeft="141dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginTop="5dp"
-        android:layout_marginEnd="161dp"
-        android:layout_marginRight="161dp"
+        android:layout_marginRight="0dp"
         android:text="Movie Title"
-        android:textAppearance="@android:style/TextAppearance.Large" />
+        android:textSize="36dp"
+        android:textAppearance="@android:style/TextAppearance.Large"
+        android:textColor="@android:color/white" />
 
     <TextView
         android:id="@+id/tvOverview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvTitle"
-        android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginStart="0dp"
         android:layout_marginLeft="0dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="0dp"
+        android:layout_marginTop="5dp"
         android:layout_marginRight="0dp"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textColor="@android:color/background_light"
+        android:textSize="17dp" />
 
     <RatingBar
         android:id="@+id/rbVoteAverage"
@@ -47,21 +43,35 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvOverview"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginTop="24dp"
         android:numStars="5"
+        android:scaleX="2"
+        android:scaleY="2"
         android:stepSize="0.5" />
 
     <ImageView
         android:id="@+id/md_backdrop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="156dp"
-        android:layout_marginBottom="383dp"
         android:clickable="true"
+        android:layout_centerHorizontal="true"
         android:onClick="OnPosterClick"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@tools:sample/avatars"
+    />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="48dp"
+        android:layout_height="43dp"
+        android:layout_alignStart="@+id/md_backdrop"
+        android:layout_alignEnd="@+id/md_backdrop"
+        android:layout_alignBottom="@+id/md_backdrop"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="43dp"
+        android:layout_marginTop="42dp"
+        android:layout_marginEnd="37dp"
+        android:layout_marginBottom="43dp"
+        app:srcCompat="@android:drawable/ic_media_play" />
 
 </RelativeLayout>
