--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -6,7 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".MovieDetailsActivity"
     android:background="@color/layoutBackground">
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            >
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
@@ -82,5 +88,8 @@
         android:layout_marginTop="20dp"
         android:textColor="@android:color/white"
         android:textSize="20dp"/>
+
+        </RelativeLayout>
+    </ScrollView>
 
 </RelativeLayout>
